--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4154,3 +4154,15 @@ input, select, textarea {
 		}
 
 	}
+
+	.pdf_files{
+		display: flex !important;
+		flex-wrap: wrap;
+		gap: 10px;
+	}
+
+	.pdf_files iframe {
+		width: 100%;
+		height: 82vh;
+	}
+
